# cryptoBacktest

./: .env.example  .gitignore  README.md  backtest_results_ema_4h.json  debug_trades.py  diagnose.py  pyproject.toml  setup.py
app/: __init__.py  __main__.py  binance.py  cache.py  candles.py  cli.py  config.py  ema.py  patterns.py  report.py  strategy.py  types.py
app/tests/: __init__.py  test_cache.py  test_ema.py  test_patterns.py  test_strategy.py
data_cache/: ADAUSDC_15m.json  ADAUSDC_1h.json  ADAUSDC_1m.json  ADAUSDC_30m.json  ADAUSDC_4h.json  ADAUSDC_5m.json  BNBUSDC_15m.json  BNBUSDC_1h.json  BNBUSDC_1m.json  BNBUSDC_30m.json  BNBUSDC_4h.json  BNBUSDC_5m.json  BTCUSDC_15m.json  BTCUSDC_1h.json  BTCUSDC_1m.json  BTCUSDC_30m.json  BTCUSDC_4h.json  BTCUSDC_5m.json  DOGEUSDC_15m.json  DOGEUSDC_1h.json  DOGEUSDC_1m.json  DOGEUSDC_30m.json  DOGEUSDC_4h.json  DOGEUSDC_5m.json  ETHUSDC_15m.json  ETHUSDC_1h.json  ETHUSDC_1m.json  ETHUSDC_30m.json  ETHUSDC_4h.json  ETHUSDC_5m.json  IOTAUSDC_15m.json  IOTAUSDC_1h.json  IOTAUSDC_1m.json  IOTAUSDC_30m.json  IOTAUSDC_4h.json  IOTAUSDC_5m.json  LINKUSDC_15m.json  LINKUSDC_1h.json  LINKUSDC_1m.json  LINKUSDC_30m.json  (+33 more)
